--- a/src/main/resources/com/example/transit_system/Register-view.fxml
+++ b/src/main/resources/com/example/transit_system/Register-view.fxml
@@ -4,51 +4,137 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.transit_system.RegisterPage">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="715.0" prefWidth="670.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.transit_system.RegisterPage">
    <children>
-      <ImageView fitHeight="522.0" fitWidth="834.0" layoutX="-71.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true" scaleX="0.85" scaleY="1.2">
+      <ImageView fitHeight="540.0" fitWidth="824.0" layoutX="-73.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true" scaleX="0.85" scaleY="1.5">
          <image>
             <Image url="@../../../img/backIMG.jpg" />
          </image>
       </ImageView>
-      <GridPane gridLinesVisible="true" hgap="5.0" layoutY="7.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="3.0" minWidth="3.0" prefHeight="450.0" prefWidth="650.0" vgap="5.0">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints maxHeight="423.0" minHeight="10.0" prefHeight="423.0" vgrow="SOMETIMES" />
-         </rowConstraints>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
+      <GridPane alignment="CENTER_LEFT" hgap="5.0" layoutX="14.0" layoutY="9.0" prefHeight="706.0" prefWidth="662.0" vgap="5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="4.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <VBox alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0" spacing="20.0" GridPane.columnIndex="1">
+            <VBox prefHeight="545.0" prefWidth="320.0" spacing="10.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <children>
-                  <Label text="Username:" />
-                  <TextField />
-                  <Label text="Password:" />
-                  <PasswordField />
-                  <Label text="Repeat Password:" />
-                  <PasswordField />
-                  <Button contentDisplay="CENTER" mnemonicParsing="false" text="Register" />
-                  <Hyperlink onAction="#LoginClick" text="Login" underline="true" />
+                  <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="320.0" spacing="5.0">
+                     <children>
+                        <VBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="114.0">
+                           <children>
+                              <Label text="Username:" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
+                           <children>
+                              <TextField prefHeight="25.0" prefWidth="145.0" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="320.0" spacing="5.0">
+                     <children>
+                        <VBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="114.0">
+                           <children>
+                              <Label text="Password:" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
+                           <children>
+                              <TextField prefHeight="25.0" prefWidth="145.0" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="320.0" spacing="5.0">
+                     <children>
+                        <VBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="114.0">
+                           <children>
+                              <Label text="Repeat Password:" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
+                           <children>
+                              <TextField prefHeight="25.0" prefWidth="145.0" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="320.0" spacing="5.0">
+                     <children>
+                        <VBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="114.0">
+                           <children>
+                              <Label text="Email:" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
+                           <children>
+                              <TextField prefHeight="25.0" prefWidth="145.0" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="300.0" spacing="5.0">
+                     <children>
+                        <VBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="114.0">
+                           <children>
+                              <Label text="Address:" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
+                           <children>
+                              <TextField prefHeight="25.0" prefWidth="145.0" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="300.0" spacing="5.0">
+                     <children>
+                        <VBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="114.0">
+                           <children>
+                              <Label text="Phone Number:" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
+                           <children>
+                              <TextField prefHeight="25.0" prefWidth="145.0" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="320.0" spacing="5.0">
+                     <children>
+                        <VBox alignment="CENTER" prefHeight="55.0" prefWidth="309.0" spacing="5.0">
+                           <children>
+                              <Button mnemonicParsing="false" text="Register" />
+                              <Hyperlink onAction="#LoginClick" text="Login" underline="true" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
                </children>
                <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
                </padding>
             </VBox>
          </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
       </GridPane>
    </children>
    <padding>
