--- a/src/main/resources/com/example/transit_system/Login-view.fxml
+++ b/src/main/resources/com/example/transit_system/Login-view.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.transit_system.LoginPage">
    <children>
@@ -22,7 +22,7 @@
             <Image url="@../../../img/backIMG.jpg" />
          </image>
       </ImageView>
-      <GridPane gridLinesVisible="true" hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="3.0" minWidth="3.0" prefHeight="439.0" prefWidth="650.0" vgap="5.0">
+      <GridPane hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="3.0" minWidth="3.0" prefHeight="439.0" prefWidth="650.0" vgap="5.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -36,6 +36,15 @@
          <children>
             <VBox alignment="TOP_CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0" spacing="40.0" GridPane.columnIndex="1">
                <children>
+                  <VBox alignment="CENTER" prefHeight="37.0" prefWidth="283.0">
+                     <children>
+                        <Label alignment="CENTER" prefHeight="28.0" prefWidth="222.0" text="Login to E7gezli!" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" wrapText="true">
+                           <font>
+                              <Font name="System Bold" size="19.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
                   <Label text="Username:" />
                   <TextField />
                   <Label text="Password:" />
