--- a/src/main/resources/com/example/transit_system/Register-view.fxml
+++ b/src/main/resources/com/example/transit_system/Register-view.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="715.0" prefWidth="670.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.transit_system.RegisterPage">
    <children>
@@ -24,13 +25,14 @@
       <GridPane alignment="CENTER_LEFT" hgap="5.0" layoutX="14.0" layoutY="9.0" prefHeight="706.0" prefWidth="662.0" vgap="5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="4.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="336.0" minHeight="10.0" prefHeight="39.0" valignment="CENTER" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="642.0" minHeight="10.0" prefHeight="642.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <VBox prefHeight="545.0" prefWidth="320.0" spacing="10.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <VBox prefHeight="545.0" prefWidth="320.0" spacing="10.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <children>
                   <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="320.0" spacing="5.0">
                      <children>
@@ -46,6 +48,11 @@
                         </VBox>
                      </children>
                   </HBox>
+                  <Label fx:id="Repeat1" alignment="CENTER" contentDisplay="CENTER" prefHeight="19.0" prefWidth="308.0" text="Username is already in use" textFill="RED">
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Label>
                   <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="320.0" spacing="5.0">
                      <children>
                         <VBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="114.0">
@@ -55,11 +62,16 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField prefHeight="25.0" prefWidth="145.0" />
+                              <TextField fx:id="psswrd" prefHeight="25.0" prefWidth="145.0" />
                            </children>
                         </VBox>
                      </children>
                   </HBox>
+                  <Label fx:id="Repeat" alignment="CENTER" contentDisplay="CENTER" prefHeight="19.0" prefWidth="308.0" text="Password Repeated Incorrectly!" textFill="RED" visible="false">
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Label>
                   <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="320.0" spacing="5.0">
                      <children>
                         <VBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="114.0">
@@ -69,7 +81,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField prefHeight="25.0" prefWidth="145.0" />
+                              <TextField fx:id="psswrdR" prefHeight="25.0" prefWidth="145.0" />
                            </children>
                         </VBox>
                      </children>
@@ -120,8 +132,8 @@
                      <children>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="309.0" spacing="5.0">
                            <children>
-                              <Button mnemonicParsing="false" text="Register" />
-                              <Hyperlink onAction="#LoginClick" text="Login" underline="true" />
+                              <Button fx:id="registerbutton" mnemonicParsing="false" onAction="#registerClick" text="Register" />
+                              <Hyperlink onAction="#LoginPage" text="Login" underline="true" />
                            </children>
                         </VBox>
                      </children>
@@ -131,6 +143,11 @@
                   <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
                </padding>
             </VBox>
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="320.0" text="Register to E7gezli!" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </Label>
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
