--- a/src/main/resources/com/example/transit_system/Home-view.fxml
+++ b/src/main/resources/com/example/transit_system/Home-view.fxml
@@ -112,6 +112,11 @@
          <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
+                  <ImageView fx:id="fwzyAD" fitHeight="401.0" fitWidth="317.0" layoutX="14.0" layoutY="162.0" pickOnBounds="true" preserveRatio="true" scaleY="1.5">
+                     <image>
+                        <Image url="@../../../img/fawzyResort.png" />
+                     </image>
+                  </ImageView>
                   <Label fx:id="Welcome_text" alignment="CENTER" contentDisplay="CENTER" layoutX="348.0" layoutY="251.0" prefHeight="170.0" prefWidth="305.0" text="Welcome" textAlignment="CENTER">
                      <font>
                         <Font name="Calibri Bold" size="38.0" />
@@ -130,11 +135,11 @@
                         <Button mnemonicParsing="false" prefHeight="41.0" prefWidth="165.0" text="Submit Feedback" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
-                  <ImageView fx:id="fwzyAD" fitHeight="378.0" fitWidth="256.0" layoutX="29.0" layoutY="177.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../img/fawzyResort.png" />
-                     </image>
-                  </ImageView>
+                  <Label fx:id="ad1" contentDisplay="CENTER" layoutX="14.0" layoutY="39.0" prefHeight="24.0" prefWidth="78.0" text="Tayayaah ads:" textAlignment="CENTER">
+                     <font>
+                        <Font name="Calibri Light" size="13.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
          </center>
