--- a/src/main/resources/com/example/transit_system/Register-view.fxml
+++ b/src/main/resources/com/example/transit_system/Register-view.fxml
@@ -24,7 +24,7 @@
       </ImageView>
       <GridPane alignment="CENTER_LEFT" hgap="5.0" layoutX="14.0" layoutY="9.0" prefHeight="706.0" prefWidth="662.0" vgap="5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="4.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
@@ -43,7 +43,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField prefHeight="25.0" prefWidth="145.0" />
+                              <TextField fx:id="Username" prefHeight="25.0" prefWidth="145.0" />
                            </children>
                         </VBox>
                      </children>
@@ -95,11 +95,16 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField prefHeight="25.0" prefWidth="145.0" />
+                              <TextField fx:id="email" prefHeight="25.0" prefWidth="145.0" />
                            </children>
                         </VBox>
                      </children>
                   </HBox>
+                  <Label fx:id="Repeat11" alignment="CENTER" contentDisplay="CENTER" prefHeight="19.0" prefWidth="308.0" text="Email is already in use" textFill="RED">
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Label>
                   <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="300.0" spacing="5.0">
                      <children>
                         <VBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="114.0">
@@ -109,7 +114,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField prefHeight="25.0" prefWidth="145.0" />
+                              <TextField fx:id="address" prefHeight="25.0" prefWidth="145.0" />
                            </children>
                         </VBox>
                      </children>
@@ -123,7 +128,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField prefHeight="25.0" prefWidth="145.0" />
+                              <TextField fx:id="phone" prefHeight="25.0" prefWidth="145.0" />
                            </children>
                         </VBox>
                      </children>
@@ -148,6 +153,11 @@
                   <Font name="System Bold" size="19.0" />
                </font>
             </Label>
+            <ImageView fitHeight="300.0" fitWidth="299.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
+               <image>
+                  <Image url="@../../../img/Logo.png" />
+               </image>
+            </ImageView>
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
