--- a/src/main/resources/com/example/transit_system/Login-view.fxml
+++ b/src/main/resources/com/example/transit_system/Login-view.fxml
@@ -17,14 +17,14 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.transit_system.LoginPage">
    <children>
-      <ImageView fitHeight="522.0" fitWidth="834.0" layoutX="-61.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="531.0" fitWidth="783.0" layoutX="-61.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../img/backIMG.jpg" />
          </image>
       </ImageView>
-      <GridPane hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="3.0" minWidth="3.0" prefHeight="439.0" prefWidth="650.0" vgap="5.0">
+      <GridPane alignment="CENTER" hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="3.0" minWidth="3.0" prefHeight="439.0" prefWidth="650.0" vgap="5.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
          <rowConstraints>
@@ -34,7 +34,12 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
          <children>
-            <VBox alignment="TOP_CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0" spacing="40.0" GridPane.columnIndex="1">
+            <ImageView fitHeight="300.0" fitWidth="299.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../img/Logo.png" />
+               </image>
+            </ImageView>
+            <VBox alignment="TOP_CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0" spacing="30.0" GridPane.columnIndex="1">
                <children>
                   <VBox alignment="CENTER" prefHeight="37.0" prefWidth="283.0">
                      <children>
@@ -45,10 +50,15 @@
                         </Label>
                      </children>
                   </VBox>
-                  <Label text="Username:" />
-                  <TextField />
+                  <Label text="Email:" />
+                  <TextField fx:id="email" />
                   <Label text="Password:" />
-                  <PasswordField />
+                  <PasswordField fx:id="psswrd" />
+                  <Label fx:id="Err" text="EMAIL OR PASSWORD WRONG" textFill="RED">
+                     <font>
+                        <Font name="Elephant" size="11.0" />
+                     </font>
+                  </Label>
                   <Button fx:id="Loginbutton" contentDisplay="CENTER" mnemonicParsing="false" text="Login" />
                   <Hyperlink onAction="#RegisterClick" text="Register as New User" underline="true" />
                </children>
