--- a/src/main/resources/com/example/transit_system/Login-view.fxml
+++ b/src/main/resources/com/example/transit_system/Login-view.fxml
@@ -17,12 +17,12 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.transit_system.LoginPage">
    <children>
-      <ImageView fitHeight="531.0" fitWidth="783.0" layoutX="-61.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="530.0" fitWidth="783.0" layoutX="-61.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../img/backIMG.jpg" />
          </image>
       </ImageView>
-      <GridPane alignment="CENTER" hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="3.0" minWidth="3.0" prefHeight="439.0" prefWidth="650.0" vgap="5.0">
+      <GridPane hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="3.0" minWidth="3.0" prefHeight="439.0" prefWidth="650.0" vgap="5.0">
          <columnConstraints>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -34,11 +34,6 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
          <children>
-            <ImageView fitHeight="300.0" fitWidth="299.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../img/Logo.png" />
-               </image>
-            </ImageView>
             <VBox alignment="TOP_CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0" spacing="30.0" GridPane.columnIndex="1">
                <children>
                   <VBox alignment="CENTER" prefHeight="37.0" prefWidth="283.0">
@@ -50,22 +45,27 @@
                         </Label>
                      </children>
                   </VBox>
-                  <Label text="Email:" />
-                  <TextField fx:id="email" />
+                  <Label text="Username:" />
+                  <TextField fx:id="username" />
                   <Label text="Password:" />
                   <PasswordField fx:id="psswrd" />
-                  <Label fx:id="Err" text="EMAIL OR PASSWORD WRONG" textFill="RED">
+                  <Label fx:id="Err" alignment="CENTER" prefHeight="36.0" prefWidth="179.0" text="Email or Password is wrong" textFill="RED" visible="false">
                      <font>
-                        <Font name="Elephant" size="11.0" />
+                        <Font name="Impact" size="15.0" />
                      </font>
                   </Label>
-                  <Button fx:id="Loginbutton" contentDisplay="CENTER" mnemonicParsing="false" text="Login" />
+                  <Button fx:id="Loginbutton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#loginClick" text="Login" />
                   <Hyperlink onAction="#RegisterClick" text="Register as New User" underline="true" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
             </VBox>
+            <ImageView fitHeight="300.0" fitWidth="299.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../img/Logo.png" />
+               </image>
+            </ImageView>
          </children>
       </GridPane>
    </children>
