--- a/src/main/resources/com/example/transit_system/Register-view.fxml
+++ b/src/main/resources/com/example/transit_system/Register-view.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -43,16 +44,30 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField fx:id="Username" prefHeight="25.0" prefWidth="145.0" />
+                              <TextField fx:id="Username" prefHeight="25.0" prefWidth="145.0" text=" " />
                            </children>
                         </VBox>
                      </children>
                   </HBox>
-                  <Label fx:id="Repeat1" alignment="CENTER" contentDisplay="CENTER" prefHeight="19.0" prefWidth="308.0" text="Username is already in use" textFill="RED">
+                  <Label fx:id="URepeat" alignment="CENTER" contentDisplay="CENTER" prefHeight="19.0" prefWidth="308.0" text="Username is already in use" textFill="RED" visible="false">
                      <font>
                         <Font size="13.0" />
                      </font>
                   </Label>
+                  <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="320.0" spacing="5.0">
+                     <children>
+                        <VBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="114.0">
+                           <children>
+                              <Label text="Name:" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
+                           <children>
+                              <TextField fx:id="name" prefHeight="25.0" prefWidth="145.0" text=" " />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="320.0" spacing="5.0">
                      <children>
                         <VBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="114.0">
@@ -62,7 +77,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField fx:id="psswrd" prefHeight="25.0" prefWidth="145.0" />
+                              <PasswordField fx:id="psswrd" />
                            </children>
                         </VBox>
                      </children>
@@ -81,7 +96,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField fx:id="psswrdR" prefHeight="25.0" prefWidth="145.0" />
+                              <PasswordField fx:id="psswrdR" />
                            </children>
                         </VBox>
                      </children>
@@ -95,12 +110,12 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField fx:id="email" prefHeight="25.0" prefWidth="145.0" />
+                              <TextField fx:id="email" prefHeight="25.0" prefWidth="145.0" text=" " />
                            </children>
                         </VBox>
                      </children>
                   </HBox>
-                  <Label fx:id="Repeat11" alignment="CENTER" contentDisplay="CENTER" prefHeight="19.0" prefWidth="308.0" text="Email is already in use" textFill="RED">
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="19.0" prefWidth="308.0" text="Email is already in use" textFill="RED">
                      <font>
                         <Font size="13.0" />
                      </font>
@@ -114,7 +129,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField fx:id="address" prefHeight="25.0" prefWidth="145.0" />
+                              <TextField fx:id="address" prefHeight="25.0" prefWidth="145.0" text=" " />
                            </children>
                         </VBox>
                      </children>
@@ -128,11 +143,12 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField fx:id="phone" prefHeight="25.0" prefWidth="145.0" />
+                              <TextField fx:id="phone" prefHeight="25.0" prefWidth="145.0" text=" " />
                            </children>
                         </VBox>
                      </children>
                   </HBox>
+                  <Label fx:id="miss" alignment="CENTER" prefHeight="17.0" prefWidth="295.0" text="A Field is Missing!" textFill="RED" visible="false" />
                   <HBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="320.0" spacing="5.0">
                      <children>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="309.0" spacing="5.0">
