--- a/src/main/resources/com/example/transit_system/Register-view.fxml
+++ b/src/main/resources/com/example/transit_system/Register-view.fxml
@@ -44,7 +44,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField fx:id="Username" prefHeight="25.0" prefWidth="145.0" text=" " />
+                              <TextField fx:id="Username" prefHeight="25.0" prefWidth="145.0" />
                            </children>
                         </VBox>
                      </children>
@@ -63,7 +63,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField fx:id="name" prefHeight="25.0" prefWidth="145.0" text=" " />
+                              <TextField fx:id="name" prefHeight="25.0" prefWidth="145.0" />
                            </children>
                         </VBox>
                      </children>
@@ -110,12 +110,12 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField fx:id="email" prefHeight="25.0" prefWidth="145.0" text=" " />
+                              <TextField fx:id="email" prefHeight="25.0" prefWidth="145.0" />
                            </children>
                         </VBox>
                      </children>
                   </HBox>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="19.0" prefWidth="308.0" text="Email is already in use" textFill="RED">
+                  <Label fx:id="ERepeat" alignment="CENTER" contentDisplay="CENTER" prefHeight="19.0" prefWidth="308.0" text="Email is already in use" textFill="RED" visible="false">
                      <font>
                         <Font size="13.0" />
                      </font>
@@ -129,7 +129,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField fx:id="address" prefHeight="25.0" prefWidth="145.0" text=" " />
+                              <TextField fx:id="address" prefHeight="25.0" prefWidth="145.0" />
                            </children>
                         </VBox>
                      </children>
@@ -143,7 +143,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="55.0" prefWidth="158.0">
                            <children>
-                              <TextField fx:id="phone" prefHeight="25.0" prefWidth="145.0" text=" " />
+                              <TextField fx:id="phone" prefHeight="25.0" prefWidth="145.0" />
                            </children>
                         </VBox>
                      </children>
